fix: prevent overlap of insert cell buttons on collapsed cells

--- a/src/flows/components/panel/InsertCellButton.scss
+++ b/src/flows/components/panel/InsertCellButton.scss
@@ -37,6 +37,14 @@
   @include gradient-v($g5-pepper, $c-amethyst);
 }
 
+.flow-panel__hidden.flow-panel .flow-divider {
+  transform: translateY(37%);
+}
+
+.flow-panel__hidden.flow-panel:last-child .flow-divider {
+  transform: translateY(100%);
+}
+
 .flow-panel__hidden.flow-panel:last-child .flow-divider:after {
   height: 50%;
 }
